--- a/michaelangeliu/src/App.scss
+++ b/michaelangeliu/src/App.scss
@@ -1,67 +1,218 @@
-/* .App {
-  text-align: center;
+// @import-normalize; /* bring in normalize.css styles */
+@import './styles/variables.scss';
+/**
+* Reset some basic elements
+*/
+* {
+   box-sizing: border-box;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+body, h1, h2, h3, h4, h5, h6,
+p, blockquote, pre, hr,
+dl, dd, ol, ul, figure {
+   margin: 0;
+   padding: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/**
+* Basic styling
+*/
+html {
+  height: 100%;
+}
+body {
+  height: 100%;
+  font-family: $base-font-family;
+  font-size: $base-font-size;
+  line-height: $base-line-height;
+  font-weight: 300;
+  color: $text-color;
+  background: url('/images/background.png'), $background-color;
+  -webkit-text-size-adjust: 100%;
+}
+#root {
+  height: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+/**
+* Set `margin-bottom` to maintain vertical rhythm
+*/
+h1, h2, h3, h4, h5, h6,
+p, blockquote, pre,
+ul, ol, dl, figure,
+%vertical-rhythm {
+  margin-bottom: $spacing-unit / 2;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
-
-.App {
-  font-family: Garamond;
-  text-align: center;
-  width: 75%;
-  margin: 0 auto;
+/**
+* Images
+*/
+img {
+  max-width: 100%;
+  vertical-align: middle;
 }
 
-article.experience {
-  position: relative;
-  margin-bottom: 1rem;
-  p {
-    margin: 0;
-    display: flex;
-    justify-content: space-between;
+
+
+/**
+* Figures
+*/
+figure > img {
+  display: block;
+}
+
+figcaption {
+  font-size: $small-font-size;
+}
+
+
+
+/**
+* Lists
+*/
+ul, ol {
+  margin-left: $spacing-unit;
+}
+
+li {
+  > ul,
+  > ol {
+       margin-bottom: 0;
   }
-  span {
-    display: inline-block;
-    &.organization {
-      font-weight: bold;
-    }
-    &.location {
-    }
-    &.title {
-      font-style: italic;
-    }
-    &.time-period {
-    }
+}
+
+
+
+/**
+* Headings
+*/
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 300;
+}
+
+
+
+/**
+* Links
+*/
+a {
+  color: $brand-color;
+  text-decoration: none;
+
+  &:visited {
+      color: darken($brand-color, 15%);
   }
-  > ul {
-    margin: 0.25rem 0 0.5rem;
-    text-align: left;
+
+  &:hover {
+      color: $text-color;
+      text-decoration: underline;
   }
+}
+
+
+
+/**
+* Blockquotes
+*/
+blockquote {
+  color: $grey-color;
+  border-left: 4px solid $grey-color-light;
+  padding-left: $spacing-unit / 2;
+  font-size: 18px;
+  letter-spacing: -1px;
+  font-style: italic;
+
+  > :last-child {
+      margin-bottom: 0;
+  }
+}
+
+
+
+/**
+* Code formatting
+*/
+pre,
+code {
+  font-size: 15px;
+  border: 1px solid $grey-color-light;
+  border-radius: 3px;
+  background-color: #eef;
+}
+
+code {
+  padding: 1px 5px;
+}
+
+pre {
+  padding: 8px 12px;
+  overflow-x: scroll;
+
+  > code {
+      border: 0;
+      padding-right: 0;
+      padding-left: 0;
+  }
+}
+
+
+
+/**
+* Wrapper
+*/
+.wrapper {
+  max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
+  max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: $spacing-unit;
+  padding-left: $spacing-unit;
+  @extend %clearfix;
+
+  @include media-query($on-laptop) {
+      max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
+      max-width:         calc(#{$content-width} - (#{$spacing-unit}));
+      padding-right: $spacing-unit / 2;
+      padding-left: $spacing-unit / 2;
+  }
+}
+
+
+
+/**
+* Clearfix
+*/
+%clearfix {
+
+  &:after {
+      content: "";
+      display: table;
+      clear: both;
+  }
+}
+
+
+
+/**
+* Icons
+*/
+.icon {
+
+  > svg {
+      display: inline-block;
+      width: 16px;
+      height: 16px;
+      vertical-align: middle;
+
+      path {
+          // fill: $grey-color;
+      }
+  }
+}
+
+/**
+* Tables
+*/
+table {
+  width: 100%;
 }
