--- a/michaelangeliu/src/pages/Resume.scss
+++ b/michaelangeliu/src/pages/Resume.scss
@@ -5,7 +5,7 @@
   width: 80%;
   max-width: 800px;
   margin: 2.5% auto;
-  padding: 2.5% 5%;
+  padding: 2.5% 3.5%;
   background: white;
   font-family: Garamond;
   color: $grey-color-dark;
@@ -36,6 +36,7 @@ article.experience {
   }
   > ul {
     margin: 0.25rem 0 0.5rem;
+    padding-left: 1.5rem;
     padding-right: 7.5rem;
     text-align: left;
   }
