--- a/michaelangeliu/src/pages/Resume.scss
+++ b/michaelangeliu/src/pages/Resume.scss
@@ -53,7 +53,7 @@ article.experience {
       font-weight: bold;
       em {
         font-weight: normal;
-    }
+      }
     }
     &.location {
       font-size: 1rem;
@@ -73,6 +73,34 @@ article.experience {
     text-align: left;
   }
 }
+
+.other-experience {
+  display: flex;
+  .education {
+    width: 65%;
+    .experience {
+      display: flex;
+      .left {
+        width: 60%;
+      }
+      .right {
+        width: 40%;
+      }
+    }
+    .school {
+      font-size: 1rem;
+      font-weight: 500;
+    }
+    .degree {
+      font-size: 0.85rem;
+    }
+  }
+  .skills {
+    width: 35%;
+  }
+}
+
+// Print Page
 
 @page {
   size: 8.5in 11in;
