Modify Resume page
- Use clearer language for summary section
- Reorder SherpaCRM section and include additional detail regarding
data pipeline
- Include Group360 in We Are Alexander name
- Change VBI to brand identity
- Hide GPA information because out of school for several years now
- Reorder Technical skills and include Tableau
- Change columns for educationi/skills to be 50% without GPA
- Decrease margins on print page

--- a/michaelangeliu/src/pages/Resume.scss
+++ b/michaelangeliu/src/pages/Resume.scss
@@ -93,16 +93,16 @@ article.experience {
 .other-experience {
   display: flex;
   .education {
-    width: 65%;
-    .experience {
-      display: flex;
-      .left {
-        width: 60%;
-      }
-      .right {
-        width: 40%;
-      }
-    }
+    width: 50%;
+    // .experience {
+    //   display: flex;
+    //   .left {
+    //     width: 60%;
+    //   }
+    //   .right {
+    //     width: 40%;
+    //   }
+    // }
     .institution {
       font-size: 1rem;
       font-weight: 500;
@@ -112,7 +112,7 @@ article.experience {
     }
   }
   .skills {
-    width: 35%;
+    width: 50%;
   }
 }
 
@@ -120,7 +120,7 @@ article.experience {
 
 @page {
   size: 8.5in 11in;
-  margin: 0.7in 1in;
+  margin: 0.5in 1in;
 
   background: white;
 }
